[package]
name = "takuzu"
version = "1.1.0"
authors = ["Letheed <letheed@outlook.com>"]
description = "Takuzu (a.k.a. Binairo) number puzzle solver"
documentation = "https://docs.rs/takuzu"
repository = "https://github.com/letheed/takuzu"
readme = "README.md"
keywords = ["takuzu", "binairo", "solver", "puzzle", "binary"]
license = "MIT"
edition = "2018"

[dependencies]
libc = "0.2"
anyhow = "1.0"

[dev-dependencies]
lazy_static = "1.4"
